# TileMapService

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  tilemapservice.spec
.github/workflows/: build-artifacts.yml  ci.yml  release.yml
config/: config.example.yaml
docker/: .dockerignore  Dockerfile  Dockerfile.linux  Dockerfile.staticx  docker-compose.yml
docs/: BUILD_GUIDE.md  SYSTEMD_GUIDE.md
docs/superpowers/plans/: 2026-06-20-github-actions-arm-linux-release.md
docs/superpowers/specs/: 2026-06-20-github-actions-arm-linux-release-design.md
scripts/: build-linux-staticx.ps1  build-linux-staticx.sh  build-linux.ps1  build-linux.sh  build-windows.ps1  ci-build-linux.sh
src/: main.py
src/static/: preview.html
src/static/libs/: VERSION.txt
src/tilemapservice/: __init__.py  systemd_manager.py
src/tilemapservice/api/: wmts.py  (+6 more)
tests/: conftest.py  test_api_metadata.py  test_api_stats.py  test_api_tiles.py  test_api_wmts.py  test_bundle_pool_concurrency.py  test_bundle_reader.py  test_cache.py  test_capabilities_builder.py  test_cdi_parser.py  test_conf_parser.py  test_config.py  test_coordinates.py  test_daemon_commands.py  test_image_formatter.py  test_main.py  test_sharded_cache.py  test_source_manager.py  test_source_manager_empty_levels.py  test_systemd_manager.py  test_tile_locator.py  test_tile_locator_range_validation.py  test_tile_service.py  test_wmts_exception.py  test_wmts_models.py  test_wmts_service.py
tests/frontend/: README.md  test_crs_utils.html
tests/integration/: test_4490_sample.py  test_sample_data_tiles.py  test_wmts_sample.py
(+25 files in other folders)
