[project]
name = "tilemapservice"
version = "0.1.1"
description = "Tile Map Service - read ESRI Compact Cache and publish XYZ/TMS tiles"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "mercantile>=1.2.1",
    "pyproj>=3.7.0",
    "pillow>=11.0.0",
    "pydantic>=2.10.0",
    "cachetools>=5.5.0",
    "pyyaml>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]
build = [
    "pyinstaller>=6.21.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--basetemp=.pytest-tmp"
markers = [
    "integration: tests requiring external sample data",
]
